helm/traefik/middleware/ip-whitelist.tpl.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whitelist
spec:
  ipWhiteList:
    sourceRange: ${jsonencode(source_range)}
